--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.14.23
+minecraft_version=1.20.3-pre1
+yarn_mappings=1.20.3-pre1+build.6
+loader_version=0.14.24
 # Mod Properties
 mod_version=1.4.0
 maven_group=me.drex
 archives_base_name=ItsOurs
 # Dependencies
-fabric_version=0.90.0+1.20.2
+fabric_version=0.90.12+1.20.3
 mixin_extras_version=0.2.0-rc.5
 permission_version=0.3-SNAPSHOT
 sgui_version=1.3.0+1.20.2
