--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.20.3-pre1
-yarn_mappings=1.20.3-pre1+build.6
-loader_version=0.14.24
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.5
 # Mod Properties
 mod_version=1.4.0
 maven_group=me.drex
 archives_base_name=ItsOurs
 # Dependencies
-fabric_version=0.90.12+1.20.3
+fabric_version=0.94.0+1.20.4
 mixin_extras_version=0.2.0-rc.5
 permission_version=0.3-SNAPSHOT
-sgui_version=1.3.0+1.20.2
+sgui_version=1.4.1+1.20.4
 message_api_version=0.1.0-1.20.2
-placeholder_api_version=2.2.0+1.20.2
+placeholder_api_version=2.3.0+1.20.3
 common_protection_api_version=1.0.0
