--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ maven_group=me.drex
 archives_base_name=ItsOurs
 # Dependencies
 fabric_version=0.96.13+1.20.5
-permission_version=0.3-SNAPSHOT
+permission_version=0.3.1
 sgui_version=1.4.1+1.20.4
 message_api_version=0.1.1-1.20.4
 placeholder_api_version=2.3.0+1.20.3
