--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=24w13a
-yarn_mappings=24w13a+build.2
-loader_version=0.15.7
+minecraft_version=1.20.5
+yarn_mappings=1.20.5+build.1
+loader_version=0.15.10
 # Mod Properties
 mod_version=1.4.0
 maven_group=me.drex
 archives_base_name=ItsOurs
 # Dependencies
-fabric_version=0.96.13+1.20.5
+fabric_version=0.97.6+1.20.5
 permission_version=0.3.1
 sgui_version=1.4.1+1.20.4
 message_api_version=0.1.1-1.20.4
